--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <div id="app"></div>
+<script>
+    require('nw.gui').Window.get().showDevTools();
+</script>
 <script src="node_modules/nw-dev/lib/dev.js"></script>
 <script src="./dist/main.js"></script>
 </body>
